[package]
name = "distance-log"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.19"
# Waiting on https://github.com/async-rs/async-std/pull/732 to be merged
async-std = { git = "https://github.com/hhggit/async-std.git", branch = "timeout_repeat", features = ["unstable"] }
chrono = { version = "0.4.6", features = ["serde"] }
distance-util = { git = "https://github.com/Seeker14491/distance-util.git", tag = "v0.1.0", features = ["serde"] }
env_logger = "0.7.1"
futures = "0.3.1"
humantime = "2.0.0"
if_chain = "1.0.0"
indicatif = "0.14.0"
itertools = "0.9.0"
log = "0.4.5"
serde = "1.0.78"
serde_derive = "1.0.78"
serde_json = "1.0.27"
steamworks = { git = "https://github.com/Seeker14491/steamworks-rs.git", tag = "v0.0.14" }
tempfile = "3.1.0"
thiserror = "1.0.5"
