[package]
name = "distance-log"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
# Waiting on https://github.com/async-rs/async-std/pull/732 to be merged
async-std = { path = "async-std-3f1e9e708e918ca2500ab1f1fa6522bba68e368f", features = ["unstable"] }
chrono = { version = "0.4", features = ["serde"] }
distance-util = { git = "https://github.com/Seeker14491/distance-util.git", tag = "v0.1.0", features = ["serde"] }
env_logger = "0.7"
futures = "0.3"
humantime = "2"
if_chain = "1"
indicatif = "0.15"
itertools = "0.9"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
steamworks = { git = "https://github.com/Seeker14491/steamworks-rs.git", tag = "v0.0.23" }
tempfile = "3"
thiserror = "1"
