[package]
name = "manager"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
color-backtrace = "0.3.0"
env_logger = "0.7.0"
futures = "0.3.4"
log = "0.4.6"
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2.11", features = ["macros", "process", "time"] }
