[package]
name = "manager"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
color-backtrace = "0.5"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.3", features = ["macros", "process", "rt", "time"] }
